added admin functionality

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/PlacementManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-20180813.jar=/Users/mehakluthra/Downloads/json-20180813.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.json-20180813.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
